--- a/IBM-VISUAL.ipynb
+++ b/IBM-VISUAL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -10,11 +10,16 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing ../creds/ibm-visual-auth.json\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'api_key': 'XXXXXXXXX',\n",
+       " 'note': 'It may take up to 5 minutes for this key to become active',\n",
+       " 'url': 'https://gateway-a.watsonplatform.net/visual-recognition/api'}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -28,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -43,21 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already up-to-date: requests in /opt/conda/envs/tf-1.1.0rc1/lib/python2.7/site-packages\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install --upgrade requests"
    ]
@@ -85,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -115,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -128,7 +125,7 @@
        "u'{\\n    \"custom_classes\": 0,\\n    \"images\": [\\n        {\\n            \"classifiers\": [\\n                {\\n                    \"classes\": [\\n                        {\\n                            \"class\": \"banana\",\\n                            \"score\": 0.804,\\n                            \"type_hierarchy\": \"/fruit/banana\"\\n                        },\\n                        {\\n                            \"class\": \"fruit\",\\n                            \"score\": 0.921\\n                        },\\n                        {\\n                            \"class\": \"mango\",\\n                            \"score\": 0.53,\\n                            \"type_hierarchy\": \"/fruit/mango\"\\n                        },\\n                        {\\n                            \"class\": \"olive color\",\\n                            \"score\": 0.95\\n                        },\\n                        {\\n                            \"class\": \"olive green color\",\\n                            \"score\": 0.737\\n                        }\\n                    ],\\n                    \"classifier_id\": \"default\",\\n                    \"name\": \"default\"\\n                }\\n            ],\\n            \"resolved_url\": \"https://raw.githubusercontent.com/watson-developer-cloud/doc-tutorial-downloads/master/visual-recognition/fruitbowl.jpg\",\\n            \"source_url\": \"https://github.com/watson-developer-cloud/doc-tutorial-downloads/raw/master/visual-recognition/fruitbowl.jpg\"\\n        }\\n    ],\\n    \"images_processed\": 1\\n}\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -225,7 +222,7 @@
        " u'images_processed': 1}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,6 +240,15 @@
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
