--- a/MS-VISION.ipynb
+++ b/MS-VISION.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
        "{'key': 'XXXXXXXXXXXXXX'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"categories\":[{\"name\":\"people_\",\"score\":0.68359375,\"detail\":{\"celebrities\":[{\"name\":\"Alan Turing\",\"faceRectangle\":{\"left\":178,\"top\":181,\"width\":232,\"height\":232},\"confidence\":0.999886036}]}}],\"requestId\":\"cf9518eb-3688-42f8-b817-77979c0a4f5a\",\"metadata\":{\"width\":707,\"height\":919,\"format\":\"Jpeg\"}}\n"
+      "{\"categories\":[{\"name\":\"people_\",\"score\":0.68359375,\"detail\":{\"celebrities\":[{\"name\":\"Alan Turing\",\"faceRectangle\":{\"left\":178,\"top\":181,\"width\":232,\"height\":232},\"confidence\":0.999886036}]}}],\"requestId\":\"cf52418f-83e7-4512-9710-0e176d60a9fa\",\"metadata\":{\"width\":707,\"height\":919,\"format\":\"Jpeg\"}}\n"
      ]
     }
    ],
@@ -94,6 +94,15 @@
     "\n",
     "####################################"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
